--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <td>2020</td>
         <td>Java Developer and Computer Graphics Project Leader</td>
       </tr>
+      <tr>
+        <td>2020</td>
+        <td>Completed IBM Call for Code Hackathon Challenge</td>
+      </tr>
     </tbody>
   </table>
   <hr size="3" noshade>
