--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <td>⭐⭐⭐</td>
       </tr>
         <tr>
-          <td>Game Development</td>
-          <td>⭐⭐⭐</td>
+          <td>Cloud Computing</td>
+          <td>⭐⭐⭐⭐⭐</td>
           <td>Graphics Designing</td>
           <td>⭐⭐⭐⭐</td>
         </tr>
