--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li>I have completed my 10th from <em>Shree Sarada Ashrama Balika Vidyalaya</em>, WBCSE board located in the city Kolkata.</li>
     <li>I have also completed my 12th or PU from <em>Carmel High School</em>, WBCHSE board loacted in the city Kolkata.</li>
     <li>Currently I'm finishing my college degree in Bachelor of Engineering from <em>Acharya Institute of Technology</em>, an Institute located in Bangalore.</li>
-    <li>I have major interests in coding new beautiful websites and working on AIs, machine learning, game develepment, app development, graphics designing and more.
+    <li>I have major interests in coding new beautiful websites and working on AIs, machine learning, game development, app development, graphics designing and more.
       <ul>
         <li><a href="https://drive.google.com/drive/folders/1_CMTPgREoNReH1t5X5Dymv4tBC_xw3NF?usp=sharing" target="_blank">Certificates</a> that I carry are mainly on UI/UX, Javascripts, Deno, Dart, Flutter, Unity, Data Science, Algorithms and so.
           <ul>
