--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
 
 <body>
   <address class="email">
-    <h4 style="margin-bottom: 0;">write to me at: <ins><span style="color: skyblue">anwesha.17.becs@acharya.ac.in</span></ins></h4>
-    <h4 style="margin-top:6px; margin-bottom: 0" >my Skype ID: <ins><span style="color: lightcoral">live:dasanwesha016</span></ins></h4>
+    <h4 style="margin-bottom: 0;">Write to me at: <ins><span style="color: skyblue">anwesha.17.becs@acharya.ac.in</span></ins></h4>
+    <h4 style="margin-top:6px; margin-bottom: 0" >My Skype ID: <ins><span style="color: lightcoral">live:dasanwesha016</span></ins></h4>
   </address>
   <hr>
   <form class="" action="mailto:anwesha.17.becs@acharya.ac.in" method="post" enctype="text/plain">
