--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <label>Your Message:</label><br>
         <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
 
-      <input type="submit" name="" value="Send!">
+      <input type="submit" name="" value="Send Me!">
   </form>
 </body>
 
