--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <hr size='3' noshade>
   <h3>Education</h3>
   <ul>
-    <li>I have completed my 10th from <em>Shree Sarada Ashrama Balika Vidyalaya</em>, WBCSE board located in the city Kolkata.</li>
+    <li>I have completed my 10th from <em>Shree Sarada Ashrama Balika Vidyalaya</em>, WBBSE board located in the city Kolkata.</li>
     <li>I have also completed my 12th or PU from <em>Carmel High School</em>, WBCHSE board loacted in the city Kolkata.</li>
     <li>Currently I'm finishing my college degree in Bachelor of Engineering from <em>Acharya Institute of Technology</em>, an Institute located in Bangalore.</li>
     <li>I have major interest in coding new beautiful websites and working on AIs, machine learning, game development, app development, graphics designing and more.
