--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td><img src="images\circle-cropped.png" alt="anwesha profile picture" height="160" width="180"></td>
       <td><h1>Anwesha Das</h1>
       <p><em>Web Developer and <strong><a href="https://anwesha17followingmyheart.blogspot.com/">Computer Science Engineer</a></strong>.</em></p>
-      <p>I am a web developer and a senior computer science student. I'm in my last/fourth year of college. I ❤️ music and art.</p></td>
+      <p>I am a web developer/software engineer. I have completed my bachelor's degree. I ❤️ music and art.</p></td>
     </tr>
 
   </table>
