--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
 
 <body>
   <address class="email">
-    <h4 style="margin-bottom: 0;">Write to me at: <ins><span style="color: skyblue">anwesha.17.becs@acharya.ac.in</span></ins></h4>
+    <h4 style="margin-bottom: 0;">Write to me at: <ins><span style="color: skyblue">anwesha.17.becs@gmail.com</span></ins></h4>
     <h4 style="margin-top:6px; margin-bottom: 0" >My Skype ID: <ins><span style="color: lightcoral">live:dasanwesha016</span></ins></h4>
   </address>
   <hr>
-  <form class="" action="mailto:anwesha.17.becs@acharya.ac.in" method="post" enctype="text/plain">
+  <form class="" action="mailto:anwesha.17.becs@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
 
