--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <hr size='3' noshade>
   <h3>Education</h3>
   <ul>
-    <li>I have completed my 10th from <em>Shree Sarada Ashrama Balika Vidyalaya</em>, WBBSE board located in the city Kolkata.</li>
-    <li>I have also completed my 12th or PU from <em>Carmel High School</em>, WBCHSE board loacted in the city Kolkata.</li>
-    <li>Currently I'm finishing my college degree in Bachelor of Engineering from <em>Acharya Institute of Technology</em>, an Institute located in Bangalore.</li>
+    <li>I have completed my 10th from <em>Shree Sarada Ashrama Balika Vidyalaya</em>, WBBSE board located in the city Kolkata and scored 85 percent.</li>
+    <li>I have also completed my 12th or PU from <em>Carmel High School</em>, with the stream 'Scince'(Physics, Chemistry, Mathematics, Biology), WBCHSE board loacted in the city Kolkata and scored 70 percent.</li>
+    <li>I have completed my Bachelor of Engineering degree with a specialization in Computer Science and Engineering from <em>Acharya Institute of Technology, Bangalore, University - Visvesvaraya Technological University, AICTE approved</em> in 2021, with a CGPA of 7.5</li>
     <li>I have major interest in coding new beautiful websites and working on AIs, machine learning, game development, app development, graphics designing and more.
       <ul>
         <li><a href="https://drive.google.com/drive/folders/1zaghxTIERn-fXa0SErjv3vLLMnEwXbsL?usp=sharing" target="_blank">Certifications</a> that I have are mainly on UI/UX, Javascripts, Deno, Dart, Flutter, Unity, Data Science, Algorithms and so.
@@ -45,6 +45,10 @@
       </tr>
     </thead>
     <tbody>
+      <tr>
+        <td>2021-Present</td>
+        <td>Working as a Software Engineer at the 'Software Engineer - Delivery' Department at Mastek Pvt. Ltd.</td>
+      </tr>
       <tr>
         <td>2019-2020</td>
         <td>Lead Backend Developer in college group-project</td>
