--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <hr size='3' noshade>
   <h3>Education</h3>
   <ul>
-    <li>I have completed my 10th from <em>Shree Sarada Ashrama Balika Vidyalaya</em>, 'WBBSE board' located in the city Kolkata and scored 85 percent.</li>
-    <li>I have also completed my 12th or PU from <em>Carmel High School</em>, with the stream 'Scince(Physics, Chemistry, Mathematics, Biology), WBCHSE board' loacted in the city Kolkata and scored 70 percent.</li>
+    <li>I have completed my 10th from <em>Shree Sarada Ashrama Balika Vidyalaya</em>, 'WBBSE board' located in the city Kolkata in 2015 and scored 85 percent.</li>
+    <li>I have also completed my 12th or PU from <em>Carmel High School</em>, with the stream 'Scince(Physics, Chemistry, Mathematics, Biology), WBCHSE board' loacted in the city Kolkata in 2017 and scored 70 percent.</li>
     <li>I have completed my Bachelor of Engineering degree with a specialization in Computer Science and Engineering from <em>Acharya Institute of Technology, Bangalore, University - Visvesvaraya Technological University, AICTE approved</em> in 2021, with a CGPA of 7.5.</li>
     <li>I have major interest in coding new beautiful websites and working on AIs, machine learning, game development, app development, graphics designing and more.
       <ul>
