--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <tbody>
       <tr>
         <td>2021-Present</td>
-        <td>Working as a Software Engineer at the 'Software Engineer - Delivery' Department at Mastek Pvt. Ltd.</td>
+        <td>Working in the postion 'Software Engineer - Delivery' at Mastek Pvt. Ltd.</td>
       </tr>
       <tr>
         <td>2019-2020</td>
