--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li>I have completed my Bachelor of Engineering degree with a specialization in Computer Science and Engineering from <em>Acharya Institute of Technology, Bangalore, University - Visvesvaraya Technological University, AICTE approved</em> in 2021, with a CGPA of 7.5.</li>
     <li>I have major interest in coding new beautiful websites and working on AIs, machine learning, game development, app development, graphics designing and more.
       <ul>
-        <li><a href="https://drive.google.com/drive/folders/1zaghxTIERn-fXa0SErjv3vLLMnEwXbsL?usp=sharing" target="_blank">Certifications</a> that I have are mainly on UI/UX, Javascripts, Deno, Dart, Flutter, Unity, Data Science, Algorithms and so.
+        <li><a href="https://drive.google.com/drive/folders/1zaghxTIERn-fXa0SErjv3vLLMnEwXbsL?usp=sharing">Certifications</a> that I have are mainly on UI/UX, Javascripts, Deno, Dart, Flutter, Unity, Data Science, Algorithms and so.
           <ul>
             <li>Some of my work and project-links are hereby attached below:</li>
             <li><a href="https://trinayani-ice-cream-kulfi.netlify.app">E-Commerce Website</a></li>
@@ -103,11 +103,11 @@
   <ol type="a">
     <li>I love to listen to music and post covers on <a href="https://www.youtube.com/channel/UChAQd4RcZ5Jco_ic43ePgng?view_as=subscriber">YouTube</a>.</li>
     <li>I also love watching anime and disney movies.</li>
-    <li>And I follow trends a lot. So I like to paint models on <a href="https://app.photobucket.com/u/Anwesha_alpha/p/fc6910f9-85be-4e23-8174-c6b13ee4cc35">Autodesk SketchBook</a>.</li>
+    <li>And I follow trends a lot. So I like to paint models on <a href="https://app.photobucket.com/u/Anwesha_alpha/p/fc6910f9-85be-4e23-8174-c6b13ee4cc35" target="_blank">Autodesk SketchBook</a>.</li>
     <li>I write songs in my free time and compose music.</li>
     <li>And since I'm a programmer so most of the time I'm busy studying and coding.</li>
   </ol>
-  <strong><a href="contact.html" target="_blank">Contact Me</a></strong>
+  <strong><a href="contact.html">Contact Me</a></strong>
 </body>
 
 </html>
