--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <tr>
       <td><img src="images\circle-cropped.png" alt="anwesha profile picture" height="160" width="180"></td>
       <td><h1>Anwesha Das</h1>
-      <p><em>Web Developer and <strong><a href="https://anwesha17followingmyheart.blogspot.com/">Computer Science Engineer</a></strong>.</em></p>
+      <p><em>Web Developer and <strong><a href="https://moodboardlightninglookbook.wordpress.com/">Computer Science Engineer</a></strong>.</em></p>
       <p>I am a web developer/software engineer. I have completed my bachelor's degree. I ❤️ music and art.</p></td>
     </tr>
 
