--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <tbody>
       <tr>
         <td>2021-Present</td>
-        <td>Working in the 'Software Engineer - Delivery', role at Mastek Pvt. Ltd.</td>
+        <td>Working in the position of 'Software Engineer - Delivery' at Mastek Pvt. Ltd.</td>
       </tr>
       <tr>
         <td>2019-2020</td>
