--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <tbody>
       <tr>
         <td>2021-Present</td>
-        <td>Working in the position, called 'Software Engineer - Delivery' at Mastek Pvt. Ltd.</td>
+        <td>Working in the position, called '<b>Software Engineer - Delivery<b>' at Mastek Pvt. Ltd.</td>
       </tr>
       <tr>
         <td>2019-2020</td>
