--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li>I have completed my Bachelor of Engineering degree with a specialization in Computer Science and Engineering from <em>Acharya Institute of Technology, Bangalore, University - Visvesvaraya Technological University, AICTE approved</em> in 2021, with a CGPA of 7.5.</li>
     <li>I have major interest in coding new beautiful websites and working on AIs, machine learning, game development, app development, graphics designing and more.
       <ul>
-        <li><a href="https://drive.google.com/drive/folders/1zaghxTIERn-fXa0SErjv3vLLMnEwXbsL?usp=sharing">Certifications</a> that I have are mainly on UI/UX, Javascripts, Deno, Dart, Flutter, Unity, Data Science, Algorithms and so.
+        <li><a href="https://drive.google.com/drive/folders/1zaghxTIERn-fXa0SErjv3vLLMnEwXbsL?usp=sharing">Certifications</a> that I have are mainly on UI/UX, Javascripts, Deno, Dart, Flutter, Unity, Data Science, Algorithms and so on.
           <ul>
             <li>Some of my work and project-links are hereby attached below:</li>
             <li><a href="https://trinayani-ice-cream-kulfi.netlify.app">E-Commerce Website</a></li>
